--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "yarn",
+  "name": "Hafiz",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "nodemon": "^1.19.4"
   }
